Finished show and index on users

--- a/app/views/user_templates/index_user.html.erb
+++ b/app/views/user_templates/index_user.html.erb
@@ -21,7 +21,7 @@
       <%= a_user.username %>
       </td>
       <td>
-      Show Details Link
+      <a href ="/users/<%=a_user.username%>"> Show details </a>
       </td>
     </tr>
   <%end%>
