--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,13 @@
   </head>
 
   <body>
+  <nav>
+    <ul>
+      <li><a href = "/users">Users</a>
+      <li><a href = "/photos">Photos</a>
+    <ul>
+  </nav>
     <%= yield %>
+    Copyright 2023. AppDev Team.
   </body>
 </html>
