--- a/app/views/user_templates/show_user.html.erb
+++ b/app/views/user_templates/show_user.html.erb
@@ -23,10 +23,10 @@
   </tr>
   <% @the_user.own_photos.each do |a_photo|%>
   <tr>
-    <td>Image</td>
-    <td>Owner</td>
-    <td>Caption</td>
-    <td>Posted</td>
+    <td><img src = "<%=a_photo.image%>"> </td>
+    <td><%= a_photo.poster.username%></td>
+    <td><%=a_photo.caption%></td>
+    <td><%=a_photo.created_at%></td>
     <td>      </td>
   </tr>
 <%end%>
