Created Add User

--- a/app/views/photo_templates/index_photos.html.erb
+++ b/app/views/photo_templates/index_photos.html.erb
@@ -1,6 +1,6 @@
 <h1>List of photos</h1>
 
-<hr>
+
 
 <form action = "/insert_photo">
 
@@ -8,12 +8,12 @@
   <input id= "image_box" name = "query_image">
 
   <label for = "caption_box "> Caption </label>
-  <textarea id = "caption_box" name ="query_caption"></textarea>
+  <textarea id = "caption_box" name ="query_caption">Enter a caption for the photo...</textarea>
 
   <label for = "owner_id_box"> Owner ID </label>
   <input id = "owner_id_box" name = "query_owner_id">
 
-  <button> Add photo </button>
+  <button>Add photo</button>
 </form>
 <hr>
 
