Created Update User

--- a/app/views/user_templates/show_user.html.erb
+++ b/app/views/user_templates/show_user.html.erb
@@ -5,9 +5,15 @@
 
   <dd><%=@the_user.id%></dd>
 
-  <dt>Edit User</dt>
+  <dt>Edit user</dt>
+  <dd>
+    <form action="/update_user/125" >
+      <label for="browser_username">Username</label>
+      <input id="browser_username" type="text" name="input_username" placeholder="Enter a username..." value= <%= @the_user.username%>>
 
-  <dd>form goes here</dd>
+      <button>Update user</button>
+    </form>
+  </dd>
 </dl>
 
 <h2>Own photos ( <%=@the_user.own_photos.count %>)</h2>
