--- a/app/views/photo_templates/show_photos.html.erb
+++ b/app/views/photo_templates/show_photos.html.erb
@@ -25,10 +25,10 @@
   <dd>
     <form action="/update_photo/<%=@the_photo.id %>">
       <label for="browser_image">Image</label>
-      <input id="browser_image" type="text" name="query_image" placeholder="Enter a URL for the image..." value="<%=@the_photo.image %> ">
+      <input id="browser_image" type="text" name="query_image" placeholder="Enter a URL for the image..." value="<%=@the_photo.image %>">
 
       <label for="browser_caption">Caption</label>
-      <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."> <%=@the_photo.image %> </textarea>
+      <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."> </textarea>
 
       <button>Update photo</button>
     </form>
@@ -67,4 +67,17 @@
   </tr>
 <%end%>
 </table>  
-<h3> Add a new comment </h3>
+<h3>Add a new comment</h3>
+
+<form action="/insert_comment_record">
+  <label for="browser_photo_id">Photo ID</label>
+  <input id="browser_photo_id" type="text" name="input_photo_id" value = <%= @the_photo.id %> >
+
+  <label for="browser_author_id">Author ID</label>
+  <input id="browser_author_id" type="text" name="input_author_id">
+
+  <label for="browser_comment">Comment</label>
+  <textarea id="browser_comment" name="input_body" placeholder="Enter a comment..."></textarea>
+
+  <button>Add comment</button>
+</form>
