--- a/app/views/user_templates/show_user.html.erb
+++ b/app/views/user_templates/show_user.html.erb
@@ -7,7 +7,7 @@
 
   <dt>Edit user</dt>
   <dd>
-    <form action="/update_user/125" >
+    <form action="/update_user/<%=@the_user.id %>" >
       <label for="browser_username">Username</label>
       <input id="browser_username" type="text" name="input_username" placeholder="Enter a username..." value= <%= @the_user.username%>>
 
