--- a/app/views/photo_templates/show_photos.html.erb
+++ b/app/views/photo_templates/show_photos.html.erb
@@ -26,7 +26,6 @@
     <form action="/update_photo/<%=@the_photo.id %>">
       <label for="browser_image">Image</label>
       <input id="browser_image" type="text" name="query_image" placeholder="Enter a URL for the image..." value="<%=@the_photo.image %>">
-
       <label for="browser_caption">Caption</label>
       <textarea id="browser_caption" name="query_caption" placeholder="Enter a caption for the photo..."> </textarea>
 
@@ -52,6 +51,8 @@
     <th>Posted</th>
   </tr>
 <% @the_photo.comments.each do |a_comment|%>
+<%= @the_photo.comments.count%>
+<%= @the_photo.comments.inspect%>
   <tr>
     <td>
       <%= a_comment.commenter.username%>
@@ -69,7 +70,7 @@
 </table>  
 <h3>Add a new comment</h3>
 
-<form action="/insert_comment_record">
+<form action="/insert_comment_record/<%=@the_photo.id %>">
   <label for="browser_photo_id">Photo ID</label>
   <input id="browser_photo_id" type="text" name="input_photo_id" value = <%= @the_photo.id %> >
 
